# Sudoku

./: CMakeLists.txt  README.md  end_game.txt  game.txt  sudoku.cpp  sudoku.h  sudoku.txt  test.cpp
Solve/sudoku求解/: sudoku求解.sln
Solve/sudoku求解/sudoku求解/: answer.txt  sudoku.cpp  sudoku求解.vcxproj
Solve/sudoku求解/sudoku求解/Debug/: sudoku求解.exe.recipe  sudoku求解.ilk  vc142.idb
Solve/sudoku求解/sudoku求解/Debug/sudoku求解.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  (+1 more)
SudokuUnitTest/: SudokuUnitTest.cpp  SudokuUnitTest.h  SudokuUnitTest.sln  SudokuUnitTest.vcxproj  SudokuUnitTest.vcxproj.filters
SudokuUnitTest/Debug/: SudokuUnitTest.dll.recipe  SudokuUnitTest.exp  SudokuUnitTest.ilk  SudokuUnitTest.lib  SudokuUnitTest.pch  SudokuUnitTest.vcxproj.FileListAbsolute.txt  vc142.idb
SudokuUnitTest/Debug/SudokuUnitTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SudokuUnitTest.lastbuildstate  SudokuUnitTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SudokuUnitTest/Release/: SudokuUnitTest.dll.recipe  SudokuUnitTest.exe.recipe  SudokuUnitTest.exp  SudokuUnitTest.iobj  SudokuUnitTest.ipdb  SudokuUnitTest.lib  SudokuUnitTest.pch  SudokuUnitTest.vcxproj.FileListAbsolute.txt  sudoku.txt  test_output.txt
SudokuUnitTest/Release/SudokuUnitTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SudokuUnitTest.lastbuildstate  SudokuUnitTest.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
gss/: sudoku.cpp
